May 6, 2009 | GnuSpeech Framework v0.9

	* Added full support for English text parsing from the original parser module (dbrisinda)
	* Added full support for number parsing from the original number parser (dbrisinda)
	* Added full support for letter-to-sound rules from the orignal letter-to-sound rules (dbrisinda)
	* Added GNU headers to all the parser and related source files (dbrisinda)

January 23, 2009 | GnuSpeech Framework v0.8

	* Added support for handling punctuation as a temporary fix (dbrisinda)